--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,10 @@
-<%-- 
-    Document   : index.jsp
-    Created on : Sep 14, 2019, 4:31:20 PM
-    Author     : murad_isgandar
---%>
-
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
 <!DOCTYPE html>
-<html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>Travel Company</title>
@@ -23,12 +21,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-
     </head>
     <body>
-
-
         <nav class="navbar navbar-expand-lg navbar-dark bg-info static-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -118,7 +112,5 @@
         </div>
 
 
-
     </body>
-
 </html>
