--- a/src/main/resources/templates/admin/adminpage.html
+++ b/src/main/resources/templates/admin/adminpage.html
@@ -1,14 +1,10 @@
-<%-- 
-    Document   : adminlogin
-    Created on : Sep 15, 2019, 6:06:02 PM
-    Author     : murad_isgandar
---%>
-
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
-<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <!DOCTYPE html>
-<html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,13 +41,14 @@
         </script>
     </head>
     <body>
+
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" th:href="@{/adminpage}">
                 <img src="/images2.jpeg" style="width:100px; height:60px;border-radius: 10px;"class="d-inline-block align-top">
 
             </a>
             <form action="/adminpage/users" method="GET">
-                <a class="btn btn-primary" href="/adminpage/users" target="blank" role="button">User Management</a>
+                <a class="btn btn-primary" th:href="@{//adminpage/users}" target="blank" role="button">User Management</a>
             </form>
             <form action="/logout" method="POST">
                 <button type="submit" class="btn btn-primary"
@@ -61,65 +58,59 @@
 
         </nav>
 
-        <div class="modal" id="delete">
-            <div class="modal-dialog">
+
+        <div class="modal" tabindex="-1" role="dialog" id="deleteModal">
+            <div class="modal-dialog" role="document">
                 <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Delete</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                     <form action="/adminpage/delete" method="POST">
-                        <!-- Modal Header -->
-                        <div class="modal-header">
-                            <h4 class="modal-title">Delete</h4>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        </div>
 
-                        <!-- Modal body -->
                         <div class="modal-body">
-                            Are you sure to delete?
+                            <p>Are you sure to delete selected packet?</p> 
                         </div>
-
-                        <!-- Modal footer -->
                         <div class="modal-footer">
+
                             <input type="hidden" name="id" id="getNameByIdForDelete"/>
-                            <input type="submit" class="btn btn-success" value="Yes">
+                            <input type="submit" class="btn btn-success" value="Delete">
                             <input type="submit" class="btn btn-danger" data-dismiss="modal" value="Cancel">
-                        </div>  
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
 
-        <div class="modal" id="update">
-            <div class="modal-dialog">
+        <div class="modal" tabindex="-1" role="dialog" id="updateModal">
+            <div class="modal-dialog" role="document">
                 <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Update</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                     <form action="/adminpage/update" method="POST">
-                        <!-- Modal Header -->
-                        <div class="modal-header">
-                            <h4 class="modal-title">Edit</h4>
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        </div>
-
-                        <!-- Modal body -->
                         <div class="modal-body">
-                            <div class="row" style="margin-left: 10px">
-
-                                <div class="form-group">
-                                    <label for="countryname">Name</label><br>
-                                    <input type="text" name="countryname" class="form-control"  placeholder="Countryname">
-
-                                    <label for="date">Date</label><br>
-                                    <input type="text" name="date" class="form-control"  placeholder="DD-MM-YY">
-                                </div>
-
-
+                            <div class="form-group">
+                                <label for="countryname">Country Name</label>
+                                <input type="text" name="countryname" class="form-control" />
+                            </div>
+                            <div class="form-group">
+                                <label for="date">Date</label>
+                                <input type="text" name="date" class="form-control" />
                             </div>
 
                         </div>
-
-                        <!-- Modal footer -->
                         <div class="modal-footer">
-                            <input type="hidden" name="id" id="getNameByIdForUpdate"/>
-                            <input type="submit" class="btn btn-success" value="Yes">
+
+                            <input type="hidden" name="id" id="getNameByIdForUpdate">
+                            <input type="submit" class="btn btn-success" value="Update">
                             <input type="submit" class="btn btn-danger" data-dismiss="modal" value="Cancel">
-                        </div>  
+                        </div>
                     </form>
                 </div>
             </div>
@@ -141,6 +132,7 @@
         </div>
         <br>
 
+
         <div class="row" style="margin-left: 10px">
             <form class="col-md-3" method="GET" action="/adminpage/search">
                 <div class="form-group">
@@ -157,47 +149,40 @@
         </div>
         <br>
 
-        <div class="col-">
-            <table class="table table-bordered">
+        <div class="table-bordered table-responsive" th:object = "${travelList}">
+            <table class="table">
                 <thead>
                     <tr>
-                        <th>#</th>
                         <th>Countryname</th>
                         <th>Date</th>
                         <th>Options</th>
                     </tr>
                 </thead>
-                <c:forEach items="${travelList}" var="item" varStatus="status">
-                    <tbody>
+                <tbody>
+                    <tr th:each="t : ${travelList}">
+                        <td th:text="${t.countryname}"></td>
+                        <td th:text="${t.date}"></td>
+                        <td>
+                            <button class="btn btn-warning" data-toggle="modal" data-target="#updateModal"
+                                    th:onclick="|getByIdUpdate('${t.id}')|"
+                                    >
+                                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                            </button> 
+                            <button class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"
+                                    th:onclick="|getByIdDelete('${t.id}')|"  
+                                    >
+                                <i class="fa fa-trash" aria-hidden="true"></i>
 
-                        <tr>
-                            <td>
-                                ${status.count}  
-                            </td>
-                            <td>
-                                ${item.countryname}
-                            </td>
-                            <td>
-                                ${item.date}
-                            </td>
-                            <td>
-                                <button class="btn btn-warning" data-toggle="modal" data-target="#update"
-                                        onclick="getByIdUpdate(${item.id})"
-                                        >
-                                    <i class="fa fa-pencil" aria-hidden="true"></i>
-                                </button>
-                                <button class="btn btn-danger" data-toggle="modal" data-target="#delete"
-                                        onclick="getByIdDelete(${item.id})"
-                                        >
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </button>
-
-                            </td>
-
-                        </tr>
-                    </tbody>
-                </c:forEach>
-            </table> 
+                            </button> 
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+
+
+
+
+
     </body>
 </html>
