--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,17 +34,17 @@ and open the template in the editor.
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.jsp">Home
+                            <a class="nav-link" th:href="@{/index}">Home
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/userpage">User Page
+                            <a class="nav-link" th:href="@{/userpage}">User Page
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/adminpage">Admin Page
+                            <a class="nav-link" th:href="@{/adminpage}">Admin Page
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
