template engine changed to thymeleaf completely

--- a/src/main/resources/templates/admin/adminpage.html
+++ b/src/main/resources/templates/admin/adminpage.html
@@ -48,7 +48,7 @@ and open the template in the editor.
 
             </a>
             <form action="/adminpage/users" method="GET">
-                <a class="btn btn-primary" th:href="@{//adminpage/users}" target="blank" role="button">User Management</a>
+                <a class="btn btn-primary" th:href="@{/adminpage/users}" target="blank" role="button">User Management</a>
             </form>
             <form action="/logout" method="POST">
                 <button type="submit" class="btn btn-primary"
