--- a/src/main/resources/templates/user/userpage.html
+++ b/src/main/resources/templates/user/userpage.html
@@ -1,13 +1,10 @@
-<%-- 
-    Document   : userpage
-    Created on : Sep 15, 2019, 8:44:05 PM
-    Author     : murad_isgandar
---%>
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
-<%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <!DOCTYPE html>
-<html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html xmlns:layout="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8">
         <title>User Page</title>
@@ -36,6 +33,7 @@
         </script>
     </head>
     <body>
+
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
             <a class="navbar-brand" href="#">
                 <img src="/images2.jpeg" style="width:150px; height:60px;border-radius: 10px;"   class="d-inline-block align-top">
@@ -91,35 +89,28 @@
                     Other<input type="radio" name="gender" value="Other">
                 </div>
 
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>#</th>    
-                            <th>Country</th>    
-                            <th>Date</th>
-                            <th>Order</th>
-                        </tr>
-                    </thead>
-                    <c:forEach items="${travelList}" var="item" varStatus="status">
+                <div class="table-bordered table-responsive" th:object = "${travelList}">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Countryname</th>
+                                <th>Date</th>
+                                <th>Options</th>
+                            </tr>
+                        </thead>
                         <tbody>
-                        <td>
-                            ${status.count} 
-                        </td>
-                        <td>
-                            ${item.countryname}
-                        </td>
-                        <td>
-                            ${item.date}
-                        </td>
-                        <td>
-
-                            <button type="button" class="btn btn-primary"
-                                    onclick="getById('${item.id}')">
-                                Choose</button>    
-                        </td>
-                    </c:forEach>
-                    </tbody>
-                </table>
+                            <tr th:each="t : ${travelList}">
+                                <td th:text="${t.countryname}"></td>
+                                <td th:text="${t.date}"></td>
+                                <td>
+                                    <button type="button" class="btn btn-primary"
+                                            th:onclick="|getById('${t.id}')|">
+                                        Choose</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
 
                 <input type="hidden" name="tour_id" id="getNameById"/>
                 <input type="submit" class="btn btn-success" onclick="informUser()" value="Submit">
@@ -130,6 +121,7 @@
 
 
         </div>
+
 
     </body>
 </html>
