--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@ and open the template in the editor.
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-info static-top">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" th:href="@{/index}">
                     <img src="/mainlogo.jpeg"alt="" style="width: 200px;height: 80px;border-radius: 50%">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
