--- a/src/main/resources/templates/admin/adminpage.html
+++ b/src/main/resources/templates/admin/adminpage.html
@@ -31,12 +31,23 @@ and open the template in the editor.
                 document.getElementById("getNameByIdForDelete").value = id;
             }
 
-            function getByIdUpdate(id) {
-                document.getElementById("getNameByIdForUpdate").value = id;
-            }
 
             function logoutPage() {
                 alert("Do you sure?");
+            }
+        </script>
+        <script>
+            function getByIdUpdate(id) {
+                document.getElementById("getNameByIdForUpdate").value = id;
+                var xhttp = new XMLHttpRequest();
+                $.ajax({
+                    url: "/getData/packet/" + id,
+                    type: 'GET',
+                    success: function (res) {
+                        $("#updateCountryname").val(res.countryname)
+                        $("#updateDate").val(res.date)
+                    }
+                });
             }
         </script>
     </head>
@@ -97,11 +108,11 @@ and open the template in the editor.
                         <div class="modal-body">
                             <div class="form-group">
                                 <label for="countryname">Country Name</label>
-                                <input type="text" name="countryname" class="form-control" />
+                                <input type="text" name="countryname" id="updateCountryname" class="form-control" required="required" />
                             </div>
                             <div class="form-group">
                                 <label for="date">Date</label>
-                                <input type="text" name="date" class="form-control" />
+                                <input type="text" name="date" id="updateDate" class="form-control" required="required" />
                             </div>
 
                         </div>
