jquery hover event is added index.html page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,12 @@ and open the template in the editor.
         </style>
         <script>
             $(document).ready(function () {
-
+            /*
+              hover event combines mouseenter and mouseleave events
+              1 st parameter in hover for mouseenter,2 nd parameter for mouseleave
+             */
+            
+            
             /* for changing pisa tower photos by mouse hovering*/
                 $("#img1").hover(function () {
 
