--- a/src/main/resources/templates/user/userpage.html
+++ b/src/main/resources/templates/user/userpage.html
@@ -24,11 +24,21 @@ and open the template in the editor.
                 document.getElementById("getNameById").value = id;
             }
             function logoutPage() {
-                alert("Do you sure?");
+                if(confirm("Do you sure?")){
+                    return ture;
+                }
+                else{
+                    return false;
+                }
             }
 
             function informUser() {
-                alert("Thank you for applying! Your information will be sent our database");
+                if(confirm("Thank you for applying! Your information will be sent our database")){
+                    return true;
+                }
+                else{
+                    return false;
+                }
             }
         </script>
     </head>
@@ -39,15 +49,15 @@ and open the template in the editor.
                 <img src="/images2.jpeg" style="width:150px; height:60px;border-radius: 10px;"   class="d-inline-block align-top">
 
             </a>
-            <form action="/logout" method="POST">
+            <form onsubmit="return logoutPage()" action="/logout" method="POST">
                 <button type="submit" class="btn btn-primary"
-                        onclick="logoutPage()">
+                        >
                     Log out</button>
             </form>
         </nav>
 
         <div class="row" id="verify" style="margin-left: 10px">
-            <form class="col-md-3" method="POST" action="/userpage/add">
+            <form onsubmit="return informUser()" class="col-md-3" method="POST" action="/userpage/add">
                 <div class="form-group">
                     <label for="username">Username</label><br>
                     <input type="text" name="username" class="form-control"  placeholder="Must be your registered username" required="required">
@@ -113,7 +123,7 @@ and open the template in the editor.
                 </div>
 
                 <input type="hidden" name="tour_id" id="getNameById"/>
-                <input type="submit" class="btn btn-success" onclick="informUser()" value="Submit">
+                <input type="submit" class="btn btn-success" value="Submit">
 
 
             </form>
